--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "react-webcam": "^7.1.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
