--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@mui/x-date-pickers": "^6.7.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "dayjs": "^1.11.8",
+    "install": "^0.13.0",
+    "npm": "^9.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -22,7 +26,8 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-webcam": "^7.1.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
