--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@mui/x-date-pickers": "^6.7.0",
     "@reduxjs/toolkit": "^1.9.5",
     "dayjs": "^1.11.8",
+    "html5-qrcode": "^2.3.8",
     "install": "^0.13.0",
     "npm": "^9.7.1",
+    "qr-scanner": "^1.4.2",
+    "random-number": "^0.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-qr-code": "^2.0.11",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
